--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,12 @@
   text-align: center;
 }
 
+
 .App-logo {
+  height: 40vmin;
+}
+
+/* .App-logo {
   height: 40vmin;
   pointer-events: none;
 }
@@ -11,7 +16,18 @@
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
   }
-}
+} */
+
+/* 
+@keyframes App-logo-spin {
+  from {
+    transform: rotate(0deg);
+  }
+
+  to {
+    transform: rotate(360deg);
+  }
+} */
 
 .App-header {
   background-color: #282c34;
@@ -26,13 +42,22 @@
 
 .App-link {
   color: #61dafb;
+  animation: orbit infinite 5s linear;
 }
 
-@keyframes App-logo-spin {
+
+
+@keyframes orbit {
   from {
-    transform: rotate(0deg);
+    transform-origin: top;
+    transform: scale3d(.7, .7, .7) rotate(0deg);
   }
+
+  50% {
+    transform: scale3d(.5, .5, .5) rotate(180deg);
+  }
+
   to {
-    transform: rotate(360deg);
+    transform: scale3d(.7, .7, .7) rotate(360deg);
   }
 }
