--- a/src/App.css
+++ b/src/App.css
@@ -2,32 +2,10 @@
   text-align: center;
 }
 
-
 .App-logo {
   height: 40vmin;
 }
 
-/* .App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-} */
-
-/* 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-
-  to {
-    transform: rotate(360deg);
-  }
-} */
 
 .App-header {
   background-color: #282c34;
@@ -42,10 +20,9 @@
 
 .App-link {
   color: #61dafb;
+  /* animation added here */
   animation: orbit infinite 5s linear;
 }
-
-
 
 @keyframes orbit {
   from {
